Fix #275: Add text to eye-icon to switch visibility of tracks.

--- a/style/timeline/timeline-custom.less
+++ b/style/timeline/timeline-custom.less
@@ -117,12 +117,25 @@ div.timeline-groups-text{
         }
     }
     
-    i.delete, i.visibility, i.update {
+    i.delete, i.update {
+        z-index: 4;
+        margin-right: 4px;
+        position: relative;
+        display: inline-block;
+        
+        &:hover {
+          .iconHover();
+        }
+    }
+
+    span.visibility {
+        font-size: 9pt;
         z-index: 4;
         margin-top: 5px;
         margin-right: 4px;
         position: relative;
         display: inline-block;
+        padding: 0px 2px 0px 2px;
         
         &:hover {
           .iconHover();
